Removed some chapters from implementation detail, wrote section on software architecture and added diagram

--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -86,7 +86,7 @@ Wenn zwei Symbole direkt aufeinander folgen, so bedeutet das, dass das linke Ele
 
 
 %------------
-\section{PCA} % a priori algorithmus?
+\section{Principal Component Analysis} % a priori algorithmus?
 \label{PCA}
  
  % Ziel
