Section on file formats for 3d models

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -81,6 +81,35 @@
  url = {https://dl.acm.org/doi/10.1145/325334.325244}
 }
 
+%%%%%%%%%%%%%%%%
+% File Formats %
+%%%%%%%%%%%%%%%%
+
+@online{obj,
+ title = {Wavefront OBJ File Format Summary},
+ url = {https://www.fileformat.info/format/wavefrontobj/egff.htm},
+ urldate = {2020-05-27}
+}
+
+@online{ObjLoader,
+ title = {Obj - a simple Wavefront OBJ file loader and writer},
+ url = {https://github.com/javagl/Obj},
+ urldate = {2020-05-27}
+}
+
+@online{alembic,
+ title = {Algembic},
+ url = {http://www.alembic.io/},
+ urldate = {2020-05-27}
+}
+
+@online{fbx,
+ title = {Autodesk FBX},
+ url = {http://help.autodesk.com/view/FBX/2019/ENU/},
+ urldate = {2020-05-27}
+}
+
+
 %%%%%%%%%%%%%%%%%%%%%%
 % Genetic Algorithms %
 %%%%%%%%%%%%%%%%%%%%%%
